# dmxbackend

./: .gitignore  Gemfile  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  run_main.sh  shell.nix
ansible/: dmxbackend.retry  dmxbackend.yml  hosts
ansible/group_vars/: all.yml
clienttest/: howto_get_connection
config/: apache_alias.conf  deploy.rb  dmxacl.wsgi
dmxacl/: lights.json  manage.py  settings.py  urls.py
dmxacl/config/: deploy.rb
dmxacl/dmxacl/: settings.py  urls.py
dmxacl/lightSync/: controller.py  models.py  sendtodmx.py  tests.py  views.py
dmxacl/media/: defaults.json  lights.json
dmxacl/static/: dmxdmon
dmxbackend/: animation.py  artnet.py  artnet_outgoing.py  artnet_server.py  channel_mapping.py  channel_state.py  enttex_usb_dmx.py  mqtt.py  opendmx_usb_dmx.py  parse_qxw.py  png_handling.py  presets.py  sendtodmx.py  server.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.svelte  DMXFrontendApp.vue  dmx_frontend.js
old-frontend/: .gitignore  README.md  package.json  webpack.config.js
presets/: README.md
static/: .gitignore  index.html
static_vue/: index.html
tests/: mainhall_2017_010.ini  mainhall_2017_010.qxw  mainhall_2025_001_cven.ini  mainhall_2025_001_cven.qxw  mainhall_2025_ALL_006.ini  mainhall_2025_ALL_006.qxw  mainhall_2025_ALL_008_FediDayrcven.ini  mainhall_2025_ALL_008_FediDayrcven.qxw  minimalrgb.ini  minimalrgb.qxw  test_channel_mapping.py  test_mqtt.py  test_parse_qxw.py  test_png_handling.py  test_presets.py  test_sendtodmx.py  test_server.py  test_state.py
(+45 files in other folders)
